--- a/examples/base/index.html
+++ b/examples/base/index.html
@@ -1,9 +1,9 @@
 <!--
  * @Author: 佐轩 zhangzuoxuan@apexsoft.com.cn
- * @Date: 2022-05-12 23:42:00
+ * @Date: 2022-05-13 11:07:09
  * @LastEditors: 佐轩 zhangzuoxuan@apexsoft.com.cn
- * @LastEditTime: 2022-05-13 15:07:28
- * @FilePath: /XavierCoinAxios/examples/index.html
+ * @LastEditTime: 2022-05-13 11:07:15
+ * @FilePath: /XavierCoinAxios/examples/base/index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
 <!DOCTYPE html>
@@ -11,16 +11,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ts-axios examples</title>
-  <link rel="stylesheet" href="/global.css">
+  <title>Base example</title>
 </head>
 
-<body style="padding: 0 20px">
-  <h1>ts-axios examples</h1>
-  <ul>
-    <li><a href="simple">Simple</a></li>
-    <li><a href="base">Base</a></li>
-  </ul>
+<body>
+  <script src="/__build__/base.js"></script>
 </body>
 
 </html>
